# rusty-dns

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: dns.rs  main.rs
